--- a/meow.html
+++ b/meow.html
@@ -5,7 +5,7 @@
   <source src="Audio/Meow.ogg" type="audio/ogg">
   <source src="Audio/Meow.mp3" type="audio/mp3">
 </audio> 
-<p><abbr title="Back"><a href="http://bit.ly/AshwoodCross1"><img src="UI/Back.png"/></a></abbr><abbr title="Stop"><img src="UI/Stop.png" onclick="document.getElementById('meows').pause(); document.getElementById('meows').currentTime = 0;""/></abbr><abbr title="Play"><img src="UI/Play.png" onclick="document.getElementById('meows').play()"/></abbr></p>
-<p><abbr title="Meow.gif"><img src="Image/Meow.gif" alt="Meow.gif"/></abbr></p>
+<p><abbr title="Back"><a href="http://bit.ly/AshwoodCross1"><img src="UI/Back.png"/></a></abbr><abbr title="Mute"><img src="UI/Mute.png" onclick="document.getElementById('meows').pause(); document.getElementById('meows').currentTime = 0;""/></abbr><abbr title="Play"><img src="UI/Song.png" onclick="document.getElementById('meows').play()"/></abbr></p>
+<p><img src="Image/Meow.gif" alt="Meow.gif"/></p>
 </body>
 </html> 
