AC11 HTML Updoot updoot
Song doesn't seem to autoplay. Simplified the naming scheme to see if it
fixes things.

--- a/sorry.html
+++ b/sorry.html
@@ -2,11 +2,11 @@
 <html>
 <body bgcolor="#333333" text="#868686">
 <audio id="meows" preload="auto" autoplay>
-  <source src="audio/sorry_i_threw_you_away.ogg" type="audio/ogg">
-  <source src="audio/sorry_i_threw_you_away.mp3" type="audio/mp3">
+  <source src="audio/sorry.ogg" type="audio/ogg">
+  <source src="audio/sorry.mp3" type="audio/mp3">
 </audio> 
 <p><abbr title="Back"><a href="http://bit.ly/AshwoodCross11"><img src="image/ui/back.png" alt="Back"/></a></abbr><abbr title="Mute"><img src="image/ui/mute.png" alt="Mute" onclick="document.getElementById('meows').pause(); document.getElementById('meows').currentTime = 0;""/></abbr><abbr title="Play"><img src="image/ui/play.png" alt="Play" onclick="document.getElementById('meows').play()"/></abbr></p>
-<p><img src="image/splash/11_sorry_song.png" alt="Hana, appologizing via Song"/></p>
+<p><img src="image/splash/11_sorry_song.png" alt="Hana, appologizing via song"/></p>
 <u><b><p>Sorry I Threw You Away:</p></b></u>
 <i><p>Flashlight<br>
 Sorry back there<br>
